# netguard-architect

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/commands/: capture.rs  mod.rs  nmap.rs  opnsense.rs  recommendation.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/nmap/: mod.rs
src-tauri/src/opnsense/: client.rs  mod.rs  rules.rs
src/components/: CapturePanel.tsx  Dashboard.tsx  LogsPanel.tsx  ScanPanel.tsx  Settings.tsx  Sidebar.tsx  StagingArea.tsx
src/hooks/: useLogs.ts  useTheme.ts
src/types/: index.ts
